--- a/02-ejecutarCodigoEnDeterminadaPagina.html
+++ b/02-ejecutarCodigoEnDeterminadaPagina.html
@@ -16,11 +16,21 @@
     <div class="container px-2 my-5">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center">Sección 2 Manipulación del Dom</h1>
+                <h1 class="text-center fw-light">Sección 2 Manipulación del Dom</h1>
                 <p>Ejecutar código en determinada página</p>
             </div>
             <div class="alert alert-primary" role="alert">
                 <p class="text-center fw-bold">Usando el método jQuery is()</p>
+            </div>
+            <div class="col-md-12 mt-3">
+                <h2 class="text-center fw-light">Contar cuantos elementos hay en el DOM</h2>
+                <ul class="list-group">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">A fourth item</li>
+                    <li class="list-group-item">And a fifth one</li>
+                </ul>
             </div>
         </div>
     </div>
@@ -71,18 +81,17 @@
     $buscaClase.animate({'width': 200}, 1000)
     //Es animado
     $buscaClase.is(':animated') && console.log("Es animado");
+
+/*############################################  Contar cuantos elementos hay en el DOM  ############################################################*/
+    var cuantosHay = $("li").length
+    console.log("Hay", cuantosHay);
+    if (condition) {
+        
+    }
+    
     </script>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
 </body>
 
 </html>
