--- a/02-ejecutarCodigoEnDeterminadaPagina.html
+++ b/02-ejecutarCodigoEnDeterminadaPagina.html
@@ -24,8 +24,17 @@
             </div>
             <div class="col-md-12 mt-3">
                 <h2 class="text-center fw-light">Contar cuantos elementos hay en el DOM</h2>
-                <ul class="list-group">
-                    <li class="list-group-item">An item</li>
+
+                <ul class="list-group" id="primeraLista">
+                    <li class="list-group-item active" aria-current="true">Primera lista</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">A fourth item</li>
+                    <li class="list-group-item">And a fifth one</li>
+                </ul>
+
+                <ul class="list-group mt-4" id="segundaLista">
+                    <li class="list-group-item active" aria-current="true">Segunda lista</li>
                     <li class="list-group-item">A second item</li>
                     <li class="list-group-item">A third item</li>
                     <li class="list-group-item">A fourth item</li>
@@ -97,6 +106,25 @@
             return this.length > 0;
         }
         console.log($("h1").existe() ? "Exite" : "No exite");
+        /*############################################  Usando el segundo argumento de la función $( )  ############################################################*/
+        $("li", "#primeraLista").each(function() {
+            console.log($(this).html());
+        });
+
+        var div = $('<div>', {
+            'class': "azul-grande",
+            'css': {
+                'background-color': 'blue'
+            },
+            'width': 30,
+            'height': 30,
+            'animate': {
+                'width': 250,
+                'height': 50
+            }
+        });
+
+        div.appendTo('body')
     </script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
