--- a/02-ejecutarCodigoEnDeterminadaPagina.html
+++ b/02-ejecutarCodigoEnDeterminadaPagina.html
@@ -62,6 +62,16 @@
                     <li class="list-group-item jugo">no</li>
                 </ul>
             </div>
+            <div class="col-md-12 mt-3">
+                <h2 class="text-center fw-light">Rompiendo los iframes</h2>
+                <div class="ratio ratio-16x9">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/8rWmJcmVWiA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="col-md-12 mt-3">
+                <h2 class="text-center fw-light">Hacer un contenido editable, incluyendo el estilo</h2>
+                <h3 class="badge bg-dark text-wrap" style="width: 45rem;">Titulo editable</h3>
+            </div>
         </div>
     </div>
     <style>
@@ -189,6 +199,23 @@
                 div.appendTo('body');
             });
         });
+        /*############################################  Rompiendo los iframes  ############################################################*/
+        if (window != window.top) {
+            window.top.location = window.location;
+        }
+        /*############################################Separar elementos de un URL usando anchor tags############################################################*/
+        var url = 'https://articulo.mercadolibre.com.mx/MLM-883382263-casco-kov-abatible-con-luz-led-stelar-gafas-dot-regalo-_JM#reco_item_pos=2&reco_backend=machinalis-homes-pdp-boos&reco_backend_type=function&reco_client=home_navigation-trend-recommendations&reco_id=3f14ed6a-ee82-442e-a420-d5e420ae2eec&c_id=/home/navigation-trends-recommendations/element&c_element_order=3&c_uid=5ab50407-9a8a-4daa-8d76-d3f6dfd4ab73#comentario';
+        var a = $('<a>', {
+            href: url
+        });
+        console.log('Host name:', a.prop('hostname'));
+        console.log('Path:', a.prop('pathname'));
+        console.log('Query:', a.prop('search'));
+        console.log('Protocolo:', a.prop('protocol'));
+        console.log('hash:', a.prop('hash'));
+        console.log(a.prop('search').split("&"));
+        /*############################################ Hacer un contenido editable, incluyendo el estilo ############################################################*/
+        $("h3").attr("contentEditable", true)
     </script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
