--- a/02-ejecutarCodigoEnDeterminadaPagina.html
+++ b/02-ejecutarCodigoEnDeterminadaPagina.html
@@ -65,13 +65,22 @@
             <div class="col-md-12 mt-3">
                 <h2 class="text-center fw-light">Rompiendo los iframes</h2>
                 <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/8rWmJcmVWiA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/8rWmJcmVWiA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                </div>
+            </div>
+            <div class="col-md-12 mt-3" id="areaEditable">
+                <h2 class="text-center fw-light">Hacer un contenido editable, incluyendo el estilo</h2>
+                <h3 class="badge bg-dark text-wrap" style="width: 45rem;">Titulo editable</h3>
+                <div class="areaEditable">
+                    <p>Resultado del area ditable</p>
+                    <button type="button" class="btn btn-outline-secondary">Guardar</button>
                 </div>
             </div>
             <div class="col-md-12 mt-3">
-                <h2 class="text-center fw-light">Hacer un contenido editable, incluyendo el estilo</h2>
-                <h3 class="badge bg-dark text-wrap" style="width: 45rem;">Titulo editable</h3>
+                <h2 class="text-center fw-light">Prevenir que un texto sea seleccionado</h2>
+                    <p id="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente.</p>
             </div>
+            
         </div>
     </div>
     <style>
@@ -80,6 +89,19 @@
             width: 140px;
             height: 140px;
             background: #A9DFBF;
+        }
+    </style>
+    <style id="divEstilos">
+        .areaEditable{
+            background: #A9DFBF;
+            color: #fff;
+            padding: 2rem;
+            text-align: center;
+            font-weight: bold;
+            border-radius: 5px;
+            -webkit-box-shadow: 6px 4px 10px -7px rgba(0,0,0,0.56);
+            -moz-box-shadow: 6px 4px 10px -7px rgba(0,0,0,0.56);
+            box-shadow: 6px 4px 10px -7px rgba(0,0,0,0.56);
         }
     </style>
     <script>
@@ -215,7 +237,22 @@
         console.log('hash:', a.prop('hash'));
         console.log(a.prop('search').split("&"));
         /*############################################ Hacer un contenido editable, incluyendo el estilo ############################################################*/
-        $("h3").attr("contentEditable", true)
+        console.log('%c Hacer un contenido editable ', 'background: #0B5345; color: #F9F9F9 ');
+        $("h3").attr("contentEditable", true);
+        /*$('#divEstilos').css({'display': 'block', 'white-space': 'pre'})
+                        .attr("contentEditable", true);*/
+
+        $('.areaEditable').attr("contentEditable", true);
+        $("button").on('click', function(){
+            let contenido = $('#areaEditable').html(); // .text() || .html()
+            console.log(contenido)
+        });
+        /*############################################ Prevenir que un texto sea seleccionado ############################################################*/
+        console.log('%c Texto sea seleccionado ', 'background: #0B5345; color: #F9F9F9 ');
+        $("#parrafo").attr("unselectable", "on")
+                        .css("user-select", "none")
+                        .on("selectstart", false)
+        
     </script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
